--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://eventouser:6yfCqfCQruKmj3Cs@eventos-db.aqdo5.mongodb.net/eventos-db?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://eventouser:****************@eventos-db.aqdo5.mongodb.net/eventos-db?retryWrites=true&w=majority
 
 
 
